--- a/src/app/project-documents/project-documents-theme.scss
+++ b/src/app/project-documents/project-documents-theme.scss
@@ -29,7 +29,7 @@
 
   // Interaction
   --pd-accent: #{c.$primary};
-  --pd-hover-bg: #{c.$secondary-lightest};
+  --pd-hover-bg: #{c.$secondary-lighter};
   --pd-selection-bg: #{c.$primary-lightest};
   --pd-danger: #{c.$danger};
 
